css/style.css
@import url(font-awesome.min.css);
@import url("http://fonts.googleapis.com/css?family=Lato:300,700");
@font-face {
    font-family: 'Lato-Hairline'; 
    src: url('../fonts/Lato-Light.ttf'); 
}

/* Warning boxes */
.alert {
    padding: 20px;
    background-color: #f44336;
    color: white;
    opacity: 1;
    transition: opacity 0.6s;
    margin-bottom: 15px;
    display: none;
}

.alert.success {background-color: #4CAF50;}
.alert.info {background-color: #2196F3;}
.alert.warning {background-color: #ff9800;}

.closebtn {
    margin-left: 15px;
    color: white;
    font-weight: bold;
    float: right;
    font-size: 22px;
    line-height: 20px;
    cursor: pointer;
    transition: 0.3s;
}

.closebtn:hover {
    color: black;
}

/* Basic */

    html{
        background: #f0f0f0 url(../images/extra_clean_paper.png);
    }

    .wipWarning{

    }

    .sidenav {
        height: 80%;
        width: 0;
        position: fixed;
        z-index: 1;
        background-color: #f2f2f2;
        overflow-x: hidden;
        transition: 0.5s;
        padding-top: 60px;
    }

    .sidenav a:hover, .offcanvas a:focus {
        color: #f1f1f1;
    }

    .sidenav .closebtn {
        position: absolute;
        top: 0;
        right: 25px;
        font-size: 36px;
        margin-left: 50px;
    }

    #main {
        transition: margin-left .5s;
        padding: 16px;
    }


    .footerLine{
        color: #545454;
    }

    #firstHeader{
        margin-top: 4.4px !important;
    }

    .extraPadding{
        padding-top: 0.5em;
    }

    .headerRight {
        font-weight: bold;
        color: #545454;
    }

    .headerRight span{
        color: #B2D94F;
    }

    .entry{
        margin: 0 0 0.8em 0;
    }

    .location{
        text-align: right;
        font-size: 9pt;
        color: #999999;
    }

    .leftBar {
        text-align: right;
    }

    .rightbar{
        padding-right: 50px !important;
    }

    .CVTitle {
        text-align: justify;
        color: #B2D94F !important;
        font-family: "Lato-Hairline";
    }

    .nameBanner{
        text-align: center;
    }

    .nameBanner span{
        font-family: "Lato-Hairline";
    }

    .keywords {
        padding: 0em 1em 1em 0em !important; 
    }

    .keywords span {
        color: #545454;
		font-weight: 700;
		line-height: 1em;
		margin: 0 0 1em 0;
		letter-spacing: -0.01em;
        font-size: 1.1em;
		line-height: 1.5em;
    }

    .HeaderName {
        text-align: left;
        padding-top: 30px !important;
    }

    .HeaderName p{
        text-align: center !important;
    }

    .categoryLeft{
        margin-bottom: 1em;   
    }

    body {
		background: #fff;
        max-width: 880px;
        margin: 0 auto;
	}

		body.is-loading * {
			-moz-animation: none !important;
			-webkit-animation: none !important;
			-o-animation: none !important;
			-ms-animation: none !important;
			animation: none !important;
			-moz-transition: none !important;
			-webkit-transition: none !important;
			-o-transition: none !important;
			-ms-transition: none !important;
			transition: none !important;
		}

	body, input, select, textarea {
		color: #646464;
		font-family: "Lato", Helvetica, sans-serif;
		font-size: 15pt;
		font-weight: 300;
		line-height: 1.75em;
	}

	a {
		-moz-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
		-webkit-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
		-o-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
		-ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
		transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
		color: #646464 !important;
		text-decoration: none;
		border-bottom: dotted 1px;
	}

		a:hover {
			text-decoration: none !important;
			color: #B2D94F !important;
			border-bottom-color: transparent;
		}

	strong, b {
		color: #545454;
		font-weight: 700;
	}

	em, i {
		font-style: italic;
	}

	p {
		margin: 0 0 0 0 !important;
	}

	h1, h2, h3, h4, h5, h6 {
		color: #545454;
		font-weight: 700;
		line-height: 1em;
		margin: 0 0 1em 0;
		letter-spacing: -0.01em;
	}

		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
			color: inherit;
			text-decoration: none;
		}

	h2 {
		font-size: 1.75em;
		line-height: 1.5em;
	}

	h3 {
		font-size: 1.25em;
		line-height: 1.5em;
	}

	h4 {
        margin-top: 1em;
        margin-bottom: 0.1em !important;
		font-size: 1.1em;
		line-height: 1.5em;
	}

	h5 {
		font-size: 0.9em;
		line-height: 1.5em;
	}

	h6 {
		font-size: 0.7em;
		line-height: 1.5em;
	}

	sub {
		font-size: 0.8em;
		position: relative;
		top: 0.5em;
	}

	sup {
		font-size: 0.8em;
		position: relative;
		top: -0.5em;
	}

	hr {
		border: 0;
		border-bottom: solid 1px rgba(144, 144, 144, 0.25);
		margin: 2em 0;
	}

		hr.major {
			margin: 3em 0;
		}

	blockquote {
		border-left: solid 4px rgba(144, 144, 144, 0.25);
		font-style: italic;
		margin: 0 0 2em 0;
		padding: 0.5em 0 0.5em 2em;
	}

	code {
		background: rgba(144, 144, 144, 0.075);
		border-radius: 0.5em;
		border: solid 1px rgba(144, 144, 144, 0.25);
		font-family: "Courier New", monospace;
		font-size: 0.9em;
		margin: 0 0.25em;
		padding: 0.25em 0.65em;
	}

	pre {
		-webkit-overflow-scrolling: touch;
		font-family: "Courier New", monospace;
		font-size: 0.9em;
		margin: 0 0 2em 0;
	}

		pre code {
			display: block;
			line-height: 1.75em;
			padding: 1em 1.5em;
			overflow-x: auto;
		}

	.align-left {
		text-align: left;
	}

	.align-center {
		text-align: center;
	}

	.align-right {
		text-align: right;
	}

/* Section/Article */

	section.special, article.special {
		text-align: center;
	}

	header p {
		color: #949494;
		position: relative;
		margin: 0 0 1.5em 0;
	}

	header h2 + p {
		font-size: 1.25em;
		margin-top: -1em;
		line-height: 1.75em;
	}

	header h3 + p {
		font-size: 1.1em;
		margin-top: -0.85em;
		line-height: 1.5em;
	}

	header h4 + p,
	header h5 + p,
	header h6 + p {
		font-size: 0.9em;
		margin-top: -0.75em;
		line-height: 1.5em;
	}
/* ... */

